--- a/package.json
+++ b/package.json
@@ -8,13 +8,21 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/vue-fontawesome": "^3.0.0-4",
+    "bulma-slider": "^2.0.4",
+    "bulma-switch": "^2.0.0",
     "canvas-object-fit": "^0.8.1",
     "fftshift": "^1.0.1",
+    "node-sass": "^6.0.1",
     "numjs": "^0.16.1",
+    "sass": "^1.42.1",
     "vue": "^3.2.16"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.2",
+    "bulma": "^0.9.3",
     "patch-package": "^6.4.7",
     "vite": "^2.6.0"
   }
