--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "node-sass": "^6.0.1",
     "numjs": "^0.16.1",
     "sass": "^1.42.1",
-    "vue": "^3.2.16"
+    "vue": "^3.2.16",
+    "vue-github-button": "^3.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.2",
