--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --base=/fourier-transform-visualization",
     "serve": "vite preview",
+    "deploy": "npm run build && gh-pages -d dist",
     "postinstall": "patch-package"
   },
   "dependencies": {
@@ -19,11 +20,13 @@
     "numjs": "^0.16.1",
     "sass": "^1.42.1",
     "vue": "^3.2.16",
-    "vue-github-button": "^3.0.1"
+    "vue-github-button": "^3.0.1",
+    "vue-router": "^4.0.11"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.2",
     "bulma": "^0.9.3",
+    "gh-pages": "^3.2.3",
     "patch-package": "^6.4.7",
     "vite": "^2.6.0"
   }
